# sheetview

./: .gitignore  Cargo.toml  README.md  plan.md
src/: app.rs  main.rs
src/data/: csv_source.rs  excel_source.rs  mod.rs
src/ui/: mod.rs  table.rs
