[package]
name = "sheetview"
version = "0.1.0"
edition = "2024"
rust-version = "1.86"

[dependencies]
ratatui = { version = "0.30", features = ["crossterm_0_29"] }
crossterm = "0.29"
clap = { version = "4.6", features = ["derive"] }
csv = "1.4"
calamine = "0.34"
arboard = "3.6"
regex = "1.11"
rust_xlsxwriter = "0.28"

[profile.release]
opt-level = 3
lto = true
